--- a/css/store/expence_day.css
+++ b/css/store/expence_day.css
@@ -291,6 +291,19 @@ details label {
 }
 
 /*-----------------------------------------------------------------*/
+.form {
+	padding: 0 5px 10px 0px;
+}
+#kassa_rest {
+	/*font-size: 1.4em;*/
+	text-align: right;
+	padding: 5px;
+}
+input[type=button]{
+	/*font-size: 1.2em;*/
+	padding: 5px;
+	cursor: pointer;
+}
 /*-----------------------------------------------------------------*/
 /*-----------------------------------------------------------------*/
 /*-----------------------------------------------------------------*/
