--- a/css/widgets/superdoc/superdoc.css
+++ b/css/widgets/superdoc/superdoc.css
@@ -9,6 +9,9 @@
 .write_off_doc_button {
 	background:url(../../../images/write_off.png) no-repeat;
 }
+.ttn_doc_button {
+	background:url(../../../images/doc_50x25.png) no-repeat;
+}
 .del_doc_button {
 	background:url(../../../images/del.png) no-repeat;
 }
@@ -99,6 +102,7 @@
 	/*position: relative;*/
 	/*background-color: green;*/
 	padding: 2px;
+	padding-bottom: 10px;
 	/*border: 1px solid black;*/
 }
 .buttons {
@@ -111,8 +115,10 @@
 	right: 2px;
 	border-radius: 5px;
 	padding: 5px;
-	background: #F0F0F0 ;
+
+	background: #FFFFFF;
 	border: 1px solid silver;
+	box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
 }
 /*----------------------------------------------------------------------------------*/
 .doc_hat td {
