--- a/css/main.css
+++ b/css/main.css
@@ -433,14 +433,15 @@ h2 {
 td {
 	cursor: default;
 }
+tr.minus, td.minus {
+	color: red;
+}
 tr.sel {
 	background-color: #F04E4E !important;
 	color: #fff;
 }
 
-td.minus {
-	color: red;
-}
+
 /*-------------------------------------------------*/
 table.std caption, table.std th {
 	font-weight: bold;
