--- a/css/main.css
+++ b/css/main.css
@@ -440,7 +440,7 @@ td {
 }
 tr.minus, td.minus {
 	color: red;
-	background-color: #FDFDAC !important;
+	background-color: #ffff00 !important;
 }
 tr.sel {
 	background-color: #F04E4E !important;
@@ -511,4 +511,35 @@ button.reload {
 }
 button.reload:hover {
 	background-position: 100% 100%;
+}
+
+/*----------------------------------------------------------------------------------------------*/
+.ui-dialog {
+	padding: 0 !important;
+}
+
+.ui-dialog .ui-dialog-titlebar {
+	/*padding: 0 !important;*/
+	text-align: center;
+	padding: 5px 5px !important;
+}
+
+.ui-dialog .ui-dialog-title {
+	float: none !important;
+	/*margin: .1em 16px .1em 0;*/
+}
+
+.ui-dialog .ui-dialog-buttonpane {
+	padding: 0 !important;
+}
+
+.ui-button {
+	display: inline-block;
+	position: relative;
+	padding: 0;
+	margin-right: .1em;
+	cursor: pointer;
+	text-align: center;
+	zoom: .8 !important;
+	overflow: visible;
 }
