исправление косяков: накладная, паспорт магазина, переименование пункта меню, добавление ссылки на движение товара во все документы, вывод даты файла при импорте...

--- a/css/store/expence_day.css
+++ b/css/store/expence_day.css
@@ -309,5 +309,12 @@ input[type=button]{
 	cursor: pointer;
 }
 /*-----------------------------------------------------------------*/
+.name>a {
+	text-decoration: none;
+	color: #00f;
+}
+.name>a:hover {
+	text-decoration: underline;
+}
 /*-----------------------------------------------------------------*/
 /*-----------------------------------------------------------------*/
