--- a/css/widgets/superdoc/superdoc.css
+++ b/css/widgets/superdoc/superdoc.css
@@ -191,10 +191,18 @@
 }
 
 tr.empty td {
-	background: none !important;
+	background: none  !important;
 	padding: 1px !important;
 }
 tr.empty {
 	font-size: 0.7em;
 	color: #bcbcbc;
-}7
+}
+
+.cell>a {
+	text-decoration: none;
+	color: #00f;
+}
+.cell>a:hover {
+	text-decoration: underline;
+}
