открытие диалога печати. другие мелкие косяки

--- a/css/print/delivery.css
+++ b/css/print/delivery.css
@@ -24,6 +24,9 @@ table.spec2 td {
 
 
 /*-------------------------------------------------------------------------------------------------------------------*/
+@page {
+	size: landscape;
+}
 /*-------------------------------------------------------------------------------------------------------------------*/
 .page {
 	/*page-break-after:always*/
