переработан расход за день (на 95% ajax), ссылка для открытия движения товара, разделитель в числах теперь пробел и прочее

--- a/css/store/expence.css
+++ b/css/store/expence.css
@@ -385,6 +385,10 @@ details label {
 	padding: 5px;
 }
 
+td.operation\.name, td.for {
+	font-size: 0.7em;
+}
+
 /*td.paymentorder {*/
 	/*display: none;*/
 /*}*/
