--- a/css/widgets/superdoc/superdoc.css
+++ b/css/widgets/superdoc/superdoc.css
@@ -218,3 +218,10 @@ tr.empty {
 .cell>a:hover {
 	text-decoration: underline;
 }
+
+#expand_all, #collapse_all {
+	margin-right: 25px;
+	text-decoration: none;
+	font-size: 10px;
+	/*display: block;*/
+}
