--- a/css/widgets/superdoc/superdoc.css
+++ b/css/widgets/superdoc/superdoc.css
@@ -102,7 +102,7 @@
 	/*position: relative;*/
 	/*background-color: green;*/
 	padding: 2px;
-	padding-bottom: 10px;
+	padding: 0;
 	/*border: 1px solid black;*/
 }
 .buttons {
