отступ для подшивки

--- a/css/print/report.css
+++ b/css/print/report.css
@@ -91,6 +91,9 @@ body {
 	width: 210mm;
 	/*height: 290mm;*/
 }
+.page.podshiv {
+	padding-left: 2cm;
+}
 /*-------------------------------------------------------------------------------------------------------------------*/
 /*-------------------------------------------------------------------------------------------------------------------*/
 /*-------------------------------------------------------------------------------------------------------------------*/
