--- a/css/print/report.css
+++ b/css/print/report.css
@@ -91,8 +91,8 @@ body {
 	width: 210mm;
 	/*height: 290mm;*/
 }
-.page.podshiv {
-	padding-left: 2cm;
+.page.podshiv, .page.p.podshiv {
+	padding-left: 20mm;
 }
 /*-------------------------------------------------------------------------------------------------------------------*/
 /*-------------------------------------------------------------------------------------------------------------------*/
