--- a/css/widgets/editTable/editTable.css
+++ b/css/widgets/editTable/editTable.css
@@ -122,7 +122,7 @@ td[ro=false] {
 
 table th {
 	color: white;
-	background: url("../../../assets/15588139/gridview/bg.gif") repeat-x scroll left top white;
+	background: url(../../../images/bg.gif) repeat-x scroll left top white;
 	text-align: center;
 	height: 25px;
 	border: 1px solid #fff;
