--- a/css/store/expence.css
+++ b/css/store/expence.css
@@ -398,4 +398,13 @@ td.operation\.name, td.for {
 /*}*/
 
 
-
+/*----------------------------------------------------------------------*/
+.c1 {
+	width: 30px;
+}
+.c2 {
+	width: 65px;
+}
+.c3 {
+	width: 400px;
+}
