--- a/css/store/receipt.css
+++ b/css/store/receipt.css
@@ -22,3 +22,16 @@
 	margin-top: 20px;
 	text-align: right;
 }
+/*--------------------------------------*/
+.c1 {
+	width: 30px;
+}
+.c2 {
+	width: 65px;
+}
+.c3 {
+	width: 55px;
+}
+.c4 {
+	width: 400px;
+}
