подправлены ценники (размер шрифта, производитель, разбиение на страницы)

--- a/css/print/cennik.css
+++ b/css/print/cennik.css
@@ -1,3 +1,12 @@
+@media print {
+	.pbreak {
+		page-break-before: always;
+	}
+	br {
+		page-break-before: always;
+	}
+}
+/*--------------------------------------------------------------*/
 .p {
 	/*width: 200mm;*/
 }
