--- a/css/widgets/superdoc/superdoc.css
+++ b/css/widgets/superdoc/superdoc.css
@@ -121,6 +121,9 @@
 	box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
 }
 /*----------------------------------------------------------------------------------*/
+.doc_hat {
+	/*display: none;*/
+}
 .doc_hat td {
 	/*position: relative;*/
 	/*background-color: #ccffff;*/
