Выборка отдельных товаров из остатков. Изменение кода в приходе - добавлением новой строки, а в старой кол-во ставится 0

--- a/css/main.css
+++ b/css/main.css
@@ -569,3 +569,7 @@ button.reload:hover {
 #tomorrow {
 	right: 0;
 }
+/*------------------------------*/
+.grid-view .pager {
+	text-align: center !important;
+}
